images alt text

--- a/content/dergi/sayi-13/fordizm/index.html
+++ b/content/dergi/sayi-13/fordizm/index.html
@@ -1,15 +1,15 @@
 +++
 title = "Kitlesel Üretim: Fordizm"
-description=""
-url="sayi-13/kitlesel-uretim-fordizm-nedir"
-aciklama="Fordizm, bir üretim ve birikim rejimi olarak teknik anlamda tanımlanabileceği gibi, sosyal ve kültürel etkileri ile birlikte ele alınarak geniş anlamda da tanımlanabilmektedir. Teknik anlamda Fordizm; sanayi üretiminin büyük oranda kitlesel üretim olarak gerçekleştirildiği, idari işler ile kol kuvvetine dayalı işlerin Taylorist bir ayrımla belirlendiği, işbölümünün ve iş tanımlarının katı bir şekilde yapıldığı, ürün standartlaştırmasının verimlilik artışları getirdiği ve artan talebin bu standartlaşmayı hızlandırdığı bir üretim biçimidir."
-type="sayfa"
-thumb="/img/tensegrity-thumbnail.jpg"
+description = ""
+url = "sayi-13/kitlesel-uretim-fordizm-nedir"
+aciklama = "Fordizm, bir üretim ve birikim rejimi olarak teknik anlamda tanımlanabileceği gibi, sosyal ve kültürel etkileri ile birlikte ele alınarak geniş anlamda da tanımlanabilmektedir. Teknik anlamda Fordizm; sanayi üretiminin büyük oranda kitlesel üretim olarak gerçekleştirildiği, idari işler ile kol kuvvetine dayalı işlerin Taylorist bir ayrımla belirlendiği, işbölümünün ve iş tanımlarının katı bir şekilde yapıldığı, ürün standartlaştırmasının verimlilik artışları getirdiği ve artan talebin bu standartlaşmayı hızlandırdığı bir üretim biçimidir."
+type = "sayfa"
+thumb = "/img/fordizm-thumbnail.jpg"
 date = "2021-09-06"
-sayi=["13"]
-sayfa="01"
-yazar=["atahan gokturk"]
-tags= ["ana sayfa", "dergi"]
+sayi = [ "13" ]
+sayfa = "01"
+yazar = [ "atahan gokturk" ]
+tags = [ "ana sayfa", "dergi", "henry ford" ]
 +++
 
 <div class="container">
@@ -35,14 +35,14 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="henry-ford-portre.jpg"
             referrerpolicy="no-referrer"
-            alt="henry-ford-portre.jpg"
+            alt="Henry Ford portesi, 1863 - 1947"
       >}}<small>Henry Ford, 1863 - 1947</small>
       </div>
       <div class="col-md-4">
          {{<img
             src="henry-ford-model-t.jpg"
             referrerpolicy="no-referrer"
-            alt="henry-ford-model-t.jpg"
+            alt="Henry Ford ve Model T fotoğrafı"
       >}}
       </div>
    </div>
@@ -79,7 +79,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="antonio-gramsci.jpg"
             referrerpolicy="no-referrer"
-            alt="antonio-gramsci.jpg"
+            alt="Antonio Gramsci portresi"
       >}}<small>Antonio Gramsci, 1891 - 1937</small>
       </div>
    </div>
@@ -111,14 +111,14 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="eli-whitney-fabrika.jpg"
             referrerpolicy="no-referrer"
-            alt="eli-whitney-fabrika.jpg"
+            alt="Eli Whitney Fabrika"
       >}}
       </div>
       <div class="col-md-6">
          {{<img
             src="eli-whitney.jpg"
             referrerpolicy="no-referrer"
-            alt="eli-whitney.jpg"
+            alt="Eli Whitney tablo"
       >}}<small>Eli Whitney, 1765 - 1825</small>
       </div>
    </div>
@@ -159,7 +159,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="frederick-winslow-taylor.jpg"
             referrerpolicy="no-referrer"
-            alt="frederick-winslow-taylor.jpg"
+            alt="Frederick Winslow Taylor portresi"
       >}}<small>Frederick Winslow Taylor, 1856 - 1915</small>
       </div>
    </div>
@@ -179,8 +179,8 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="ford-motor-comany-model-t-uretim-bandinda.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-motor-comany-model-t-uretim-bandinda.jpg"
-      >}}<small>Ford Motor Şirketi: Üretim, Dagenham, England</small>
+            alt="Ford Motor Şirketi: Üretim, Dagenham, İngiltere"
+      >}}<small>Ford Motor Şirketi: Üretim, Dagenham, İngiltere</small>
       </div>
    </div>
 
@@ -206,7 +206,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="ford-model-t-uretimde.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-model-t-uretimde.jpg"
+            alt="Ford Model T arabaları, fabrikadan görüntü. (Hulton Archive/Getty Images tarafından)"
       >}}<small>
             Ford Model T arabaları, fabrikadan görüntü. (Hulton Archive/Getty
             Images tarafından)
@@ -246,7 +246,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="charli-chaplin-anahtarlar-modern-times-filmi.jpg"
             referrerpolicy="no-referrer"
-            alt="charli-chaplin-anahtarlar-modern-times-filmi.jpg"
+            alt="Modern Times filminden sahne. Charlie Chaplin anahtlarlar ile."
       >}}<small>Modern Times filminden sahne.</small>
       </div>
    </div>
