--- a/content/dergi/sayi-13/kent-mobilyalari/index.html
+++ b/content/dergi/sayi-13/kent-mobilyalari/index.html
@@ -4,7 +4,7 @@ description=""
 url="sayi-13/kent-mobilyalari-tasarimi"
 aciklama="Kent mobilyaları; kentsel yaşamı daha zevkli ve anlamlı kılan, kullanıcıların toplum yaşamındaki ihtiyaçlarına çözüm getiren, kentsel konfor ve estetik tanıyan tasarım ürünlerdir. Kent mobilyaları, ülke ve şehirlerin kültürel özelliklerine bağlı olarak çeşitlenmektedir. Bu elemanlar, kentsel kimliği oluşturmak ve toplum hayatını kolaylaştırmak açısından çok önemli role sahiptir."
 type="sayfa"
-thumb="/img/"
+thumb="/img/kent-mobilyalari-tasarimi-thumbnail.jpg"
 date = "2021-09-06"
 sayi=["13"]
 sayfa="04"
@@ -17,7 +17,7 @@ tags= ["ana sayfa", "dergi"]
       {{<img
          src="islevlerine-gore-kent-mobilyalari.jpg"
          referrerpolicy="no-referrer"
-         alt="işlevlerine-göre-kent-mobilyaları.jpg"
+         alt="İşlevlerine göre kent mobilyaları"
       >}}
    </p>
    <h2 id="kent-mobilyası-nedir">Kent Mobilyası Nedir?</h2>
@@ -67,7 +67,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="kent-mobilyasi-sema.jpg"
             referrerpolicy="no-referrer"
-            alt="kent-mobilyası-şema.jpg"
+            alt="Kent mobilyalarının tasarımcıdan kullanıcıya kadarki sürecini gösteren şema."
          >}}
          <small
             > 
@@ -121,12 +121,12 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="sunset-parklet-kent-mobilyasi.jpg"
             referrerpolicy="no-referrer"
-            alt="sunset-parklet-kent-mobilyas.jpg"
+            alt="Sunset Parklet kent mobilyası, San Francisco"
          >}}
          {{<img
             src="sunset-parklet.jpg"
             referrerpolicy="no-referrer"
-            alt="sunset-parklet.jpg"
+            alt="Sunset Parklet, San Francisco"
          >}}<small>Sunset Parklet, San Francisco</small>
       </div>
       <div class="col-md-6">
@@ -154,12 +154,12 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="please-be-seated-kent-mobilyasi.jpg"
             referrerpolicy="no-referrer"
-            alt="please-be-seated-kent-mobilyas.jpg"
+            alt="Please Be Seated kent mobilyası, London"
          >}}
          {{<img
             src="please-be-seated.jpg"
             referrerpolicy="no-referrer"
-            alt="please-be-seated.jpg"
+            alt="Please Be Seated kent mobilyası, London"
          >}}<small>Please Be Seated, London</small>
          <h5 class="mt-md-5">Malzeme</h5>
          <p>
@@ -223,12 +223,12 @@ tags= ["ana sayfa", "dergi"]
     <div class="col-md-6">      {{<img
          src="atik-kutulari.jpg"
          referrerpolicy="no-referrer"
-         alt="Atk-kutular-3l.jpg"
+         alt="Atık kutular, kent mobilyası tasarımı"
       >}}
       {{<img
          src="atik-kutulari-new-york.jpg"
          referrerpolicy="no-referrer"
-         alt="atk-kutular-new-york.jpg"
+         alt="Atık kutular kent mobilyası tasarımı, New York"
       >}}
    <small>New York, ABD</small></div>
 </div>
@@ -297,13 +297,13 @@ tags= ["ana sayfa", "dergi"]
        {{<img
          src="kent-aydinlatmasi.jpg"
          referrerpolicy="no-referrer"
-         alt="kent-aydnlatmas.jpg"
+         alt="Kent Mobilyası, Aydınlatma"
       >}}
       <small>Skegness, İngiltere</small>      <br><br>
       {{<img
          src="TheAlphabet-Lamp.jpg"
          referrerpolicy="no-referrer"
-         alt="TheAlphabet-Lamp.jpg"
+         alt="Kent Mobilyası, Aydınlatma - TheAlphabet Lamp"
       >}}  
       <small>Assen, Hollanda</small></div>
 </div>
@@ -322,8 +322,8 @@ tags= ["ana sayfa", "dergi"]
     <div class="col-md-4">      {{<img
          src="london-telephone-box.jpg"
          referrerpolicy="no-referrer"
-         alt="london-telephone-box.jpg"
-      >}}   <small>K6 Telephone Box, London</small></div>
+         alt="London Telefon Kulübesi Kent mobilyası tasarımı"
+      >}}   <br><small>K6 Telephone Box, London</small></div>
     <div class="col-md-4">  <h5>Tasarım Kriterleri</h5> <ul>
       <li>
          Kullanıcı telefonla konuşurken dışarıdaki gürültüden
@@ -355,7 +355,7 @@ tags= ["ana sayfa", "dergi"]
     <div class="col-md-4"> {{<img
          src="Orelhao-phone-box.jpg"
          referrerpolicy="no-referrer"
-         alt="Orelhao-phone-box.jpg"
+         alt="Orelhao telefon kulübesi, kent mobilyası tasarımı"
       >}}   <small>Orelhao Phone Box, Brazil</small></div>
 </div>
 
@@ -398,7 +398,7 @@ tags= ["ana sayfa", "dergi"]
     <div class="col-md-6">{{<img
          src="playground-new-york.jpg"
          referrerpolicy="no-referrer"
-         alt="playground-new-york.jpg"
+         alt="Playground, New York, ABD"
       >}}   <small>New York, ABD</small></div></div>
       <div class="row">
     <div class="col-md-4">
@@ -412,12 +412,12 @@ tags= ["ana sayfa", "dergi"]
     <div class="col-md-4">      {{<img
          src="Marmara-Forum.jpg"
          referrerpolicy="no-referrer"
-         alt="Marmara-Forum.jpg"
+         alt="Kent Mobilyaları: Marmara Forum, İstanbul"
       >}}   <small>Marmara Forum, İstanbul</small></div>
     <div class="col-md-4">      {{<img
          src="Marmara-forum-i-mekan.jpg"
          referrerpolicy="no-referrer"
-         alt="Marmara-forum-i-mekan.jpg"
+         alt="Kent Mobilyaları: Marmara Forum, İstanbul"
       >}}</div>
 </div>
 
@@ -430,7 +430,7 @@ tags= ["ana sayfa", "dergi"]
     <div class="col-md-4">      {{<img
          src="trafik-bariyerleri.jpg"
          referrerpolicy="no-referrer"
-         alt="trafik-bariyerleri.jpg"
+         alt="Trafik Bariyerleri, kent mobilyası"
       >}}</div>
     <div class="col-md-4">         <p>
       Sınırlayıcı elemanların temel amaçları; gizlilik, emniyet ve güvenlik,
@@ -445,7 +445,7 @@ tags= ["ana sayfa", "dergi"]
     <div class="col-md-4">      {{<img
          src="sinir-elemani-1.jpg"
          referrerpolicy="no-referrer"
-         alt="sinir-elemani-1.jpg"
+         alt="Sınır elemanı, kent mobilyası"
       >}}</div>
 </div>
 <hr>
@@ -460,17 +460,17 @@ tags= ["ana sayfa", "dergi"]
     <div class="col-md-4">      {{<img
          src="reklam-panolari.jpg"
          referrerpolicy="no-referrer"
-         alt="reklam-panolar.jpg"
+         alt="Reklam panoları, kent mobilyası"
       >}}</div>
     <div class="col-md-4">      {{<img
          src="meydan-saati.jpg"
          referrerpolicy="no-referrer"
-         alt="meydan-saati.jpg"
+         alt="Meydan saati, kent mobilyası"
       >}}</div>
     <div class="col-md-4">      {{<img
          src="sokak-levhalar.jpg"
          referrerpolicy="no-referrer"
-         alt="sokak-levhalar.jpg"
+         alt="Sokak levhası, kent mobilyası"
       >}}</div>
 </div>
 
@@ -507,13 +507,13 @@ tags= ["ana sayfa", "dergi"]
       gelebilecek etkilerden zarar görmeyecek yapıda olmalıdırlar.
    </p>
    <div class="row">
-    <div class="col-md-4">  {{<img src="stringio.jpg" referrerpolicy="no-referrer" alt="stringio.jpg" >}}</div>
+    <div class="col-md-4">  {{<img src="stringio.jpg" referrerpolicy="no-referrer" alt="Stringio, kent mobilyası" >}}</div>
     <div class="col-md-4">  {{<img
          src="ss-havuzu.jpg"
          referrerpolicy="no-referrer"
-         alt="ss-havuzu.jpg"
+         alt="Süs havuzu, kent mobilyası"
       >}}</div>
-    <div class="col-md-4">{{<img src="ciceklik.jpg" referrerpolicy="no-referrer" alt="ieklik.jpg" >}}</div>
+    <div class="col-md-4">{{<img src="ciceklik.jpg" referrerpolicy="no-referrer" alt="Çiçeklik, kent mobilyası" >}}</div>
 </div>
 <button
 class="btn markutbtn"
