--- a/content/dergi/sayi-13/model-t/index.html
+++ b/content/dergi/sayi-13/model-t/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-13/i̇konik-arabalar-ford-model-t"
 aciklama="Ford Model T varlıklı-yoksul herkesin bir otomobil alabilme ihtimalinin önünü açan öncü bir otomobildir. Henry Ford otomobillerin sadece varlıklı insanlar tarafından kullanılmasından rahatsız olmuş ve bu durumu nasıl değiştirebileceği üzerine çalışmalar yapmıştır. Bu çalışmaların sonucunda seri üretim bandını temellendiren Henry Ford, Model T’yi ilk seri üretilen otomobil olarak piyasaya sürmüştür."
 type="sayfa"
-thumb="/img/"
+thumb="/img/ford-model-t-thumbnail.jpg"
 date = "2021-09-06"
 sayi=["13"]
 sayfa="02"
 yazar=["mucahit vasfi bas"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "henry ford"]
 +++
 
 <div class="container">
@@ -34,22 +34,22 @@ tags= ["ana sayfa", "dergi"]
          {{<img
          src="1909-ford-model-t.jpg"
          referrerpolicy="no-referrer"
-         alt="1909-ford-model-t.jpg"
+         alt="1909, Ford Model T"
       >}} {{<img
       src="ford-model-t-yandan-gorunus.jpg"
       referrerpolicy="no-referrer"
-      alt="ford-model-t-yandan-gorunus.jpg"
+      alt="ford model t yandan görünüş"
    >}}
       </div>
       <div class="col-md-6">
          {{<img
             src="1915-ford-model-t-arabasi.jpg"
             referrerpolicy="no-referrer"
-            alt="1915-ford-model-t-arabasi.jpg"
+            alt="1915, Ford Model T"
          >}}         {{<img
          src="ford-runabout-1926-model-t.jpg"
          referrerpolicy="no-referrer"
-         alt="ford-runabout-1926-model-t.jpg"
+         alt="Ford Model T 1926 Runabout"
       >}}
       </div>
    </div>
@@ -72,14 +72,14 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="ford-model-t-teknik-resim.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-model-t-teknik-resim.jpg"
+            alt="Ford Model T Teknik Resim"
          >}}
       </div>
       <div class="col-md-4">
          {{<img
             src="teknik-resim-model-t-ford.gif"
             referrerpolicy="no-referrer"
-            alt="teknik-resim-model-t-ford.gif"
+            alt="Ford Model T Reknik Resim"
          >}}
       </div>
    </div>
@@ -110,19 +110,19 @@ tags= ["ana sayfa", "dergi"]
          {{<img
          src="ford-model-t-onden-gorunus.jpg"
          referrerpolicy="no-referrer"
-         alt="ford-model-t-onden-gorunus.jpg"
+         alt="Ford Model T Önden Görünüş"
       >}}
       </div>
       <div class="col-md-4">
          {{<img
             src="ford-model-t-motoru-teknik-detaylari-kesit.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-model-t-motoru-teknik-detaylari-kesit.jpg"
+            alt="Ford Model T motoru teknik detayları kesit"
          >}}
          {{<img
             src="ford-model-t-motoru.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-model-t-motoru.jpg"
+            alt="Ford Model T motoru"
          >}}
       </div>
    </div>
@@ -155,19 +155,19 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="ford-model-t-tanitim-brosurleri-1924-touring-sedan-runabout-coupe.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-model-t-tanitim-brosurleri-1924-touring-sedan-runabout-coupe.jpg"
+            alt="Ford Model T tanıtım broşürleri 1924 Touring, Sedan, Runabout, Coupe"
          >}}
          {{<img
          src="ford-fordor-1926-model-t.jpg"
          referrerpolicy="no-referrer"
-         alt="ford-fordor-1926-model-t.jpg"
+         alt="Ford Model T, 1926, Fordor"
       >}}
       </div>
       <div class="col-md-4">
          {{<img
             src="ford-1924-model-t-araci-reklam-afisi.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-1924-model-t-araci-reklam-afisi.jpg"
+            alt="Ford Model T 1924 Reklam Afişi"
          >}}
       </p>
       </div>
@@ -179,7 +179,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="henry-ford-ve-model-t-araci.jpg"
             referrerpolicy="no-referrer"
-            alt="henry-ford-ve-model-t-araci.jpg"
+            alt="Henry Ford ve Ford Model T"
          >}}
       </div>
       <div class="col-md-4">
@@ -197,7 +197,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="henry-ford-1919-portre.jpg"
             referrerpolicy="no-referrer"
-            alt="henry-ford-1919-portre.jpg"
+            alt="Henry Ford 1919 Portre"
          >}}
       </div>
    </div>
@@ -222,7 +222,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="ford-model-t-uretim-bandinda.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-model-t-uretim-bandinda.jpg"
+            alt="Ford Model T üretim bandında"
          >}}
       </div>
    </div>
@@ -260,7 +260,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="1926-ford-model-t-reklami-floyd-brink.jpg"
             referrerpolicy="no-referrer"
-            alt="1926-ford-model-t-reklami-floyd-brink.jpg"
+            alt="Ford Model T 1926, reklam afişi, Floyd Brink"
          >}}
       </div>
    </div>
@@ -268,7 +268,7 @@ tags= ["ana sayfa", "dergi"]
    {{<img
    src="model-t-ford-siyah-perspektif.jpg"
    referrerpolicy="no-referrer"
-   alt="model-t-ford-siyah-perspektif.jpg"
+   alt="Ford Model T siyah perspektif"
    >}}
    <h3>Gövde Tipleri</h3>
    <div class="row">
@@ -290,14 +290,14 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="ford-model-t-turleri.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-model-t-turleri.jpg"
+            alt="Ford Model T gövde tipleri"
          >}}
       </div>
       <div class="col-md-6">
          {{<img
             src="ford-model-t-1925-reklam-brosuru.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-model-t-1925-reklam-brosuru.jpg"
+            alt="Ford Model T 1925 reklam broşürü"
          >}}
       </div>
    </div>
@@ -327,7 +327,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="model-t-ford-siyah-the-coupe.jpg"
             referrerpolicy="no-referrer"
-            alt="model-t-ford-siyah-the-coupe.jpg"
+            alt="Ford Model T Siyah The Coupe"
          >}}
          <small>Ford Model T Touring</small>
       </div>
@@ -338,7 +338,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="ford-model-t-ahsap-yan-gorunus.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-model-t-ahsap-yan-gorunus.jpg"
+            alt="Ford Model T Ahşap Yan Görünüş, Pick Up"
          >}}
          <small>Ford Model T Pick Up</small>
       </div>
@@ -346,7 +346,7 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="ford-beyaz-mavi-model-t.jpg"
             referrerpolicy="no-referrer"
-            alt="ford-beyaz-mavi-model-t.jpg"
+            alt="Ford Model TT Bus"
          >}}<small>Ford Model TT Bus</small>
       </div>
    </div>
