--- a/content/dergi/sayi-13/tensegritiy/index.html
+++ b/content/dergi/sayi-13/tensegritiy/index.html
@@ -35,19 +35,19 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="tasarim-sozlugu-tensegrity.jpg"
             referrerpolicy="no-referrer"
-            alt="tasarim-sozlugu-tensegrity.jpg"
+            alt="Tasarım Sözlüğü Tensegrity"
       >}}
       </div>
       <div class="col-md-6">
          {{<img
             src="richard-buckminster-fuller.jpg"
             referrerpolicy="no-referrer"
-            alt="richard-buckminster-fuller.jpg"
+            alt="Richard Buckminster Fuller"
       >}}<small>Richard Buckminster Fuller</small><br /><br />
          {{<img
             src="tensegrity-lego.jpg"
             referrerpolicy="no-referrer"
-            alt="tensegrity-lego.jpg"
+            alt="Tensegrtiy Lego"
       >}}
       </div>
    </div>
@@ -57,7 +57,7 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="tensegrity-sema.jpg"
             referrerpolicy="no-referrer"
-            alt="tensegrity-sema.jpg"
+            alt="Tensegrity Yapısı Hakkında Şema"
       >}}
       </div>
       <div class="col-md-4">
@@ -86,7 +86,7 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="tasarim-sozlugu-tensegrity-biology.jpg"
             referrerpolicy="no-referrer"
-            alt="tasarim-sozlugu-tensegrity-biology.jpg"
+            alt="Tasarım Sözlüğü Tensegrity - Biyoloji"
       >}}
       </div>
       <div class="col-md-4">
@@ -104,7 +104,7 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="tasarim-sozlugu-tensegrity-biology-person.jpg"
             referrerpolicy="no-referrer"
-            alt="tasarim-sozlugu-tensegrity-biology-person.jpg"
+            alt="Tasarım Sözlüğü Tensegrity - Biyolojik İnsan"
       >}}
       </div>
    </div>
@@ -114,7 +114,7 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="richard-fuller-Jeodezik-kubbe.jpg"
             referrerpolicy="no-referrer"
-            alt="richard-fuller-Jeodezik-kubbe.jpg"
+            alt="Richard Buckminster Fuller, Jeodezik Kubbe"
       >}}<small>Richard Buckminster Fuller, Jeodezik Kubbe</small>
       </div>
       <div class="col-md-6">
@@ -141,7 +141,7 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="kenneth-duane-snelson-needle-tower.jpg"
             referrerpolicy="no-referrer"
-            alt="kenneth-duane-snelson-needle-tower.jpg"
+            alt="Kenneth Duane Snelson, Needle Tower tasarımcısı"
       >}}<small>
             <strong>Kenneth Duane Snelson</strong>, Amerikalı çağdaş heykeltıraş
             ve fotoğrafçı. Heykel çalışmaları, &#39;gerginlik&#39; fikrine göre
@@ -178,21 +178,21 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="kurilpa-bridge.jpg"
             referrerpolicy="no-referrer"
-            alt="kurilpa-bridge.jpg"
+            alt="Tensegrity Mimari - Kurilpa Bridge"
       >}}<small>Kurilpa Bridge</small>
       </div>
       <div class="col-md-4">
          {{<img
             src="needle-tower-design.jpg"
             referrerpolicy="no-referrer"
-            alt="needle-tower-design.jpg"
+            alt="Tensegrity Mimari - Needle Tower tasarımı"
       >}}<small>Needle Tower</small>
       </div>
       <div class="col-md-4">
          {{<img
             src="estadio-ciudad-de-la-plata.jpg"
             referrerpolicy="no-referrer"
-            alt="estadio-ciudad-de-la-plata.jpg"
+            alt="Tensegrity Mimari - Estadio Ciudad de La Plata"
       >}}<small>Estadio Ciudad de La Plata</small>
       </div>
    </div>
@@ -201,21 +201,21 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="mnih-olimpiyat-stadyumu.png"
             referrerpolicy="no-referrer"
-            alt="münih-olimpiyat-stadyumu.png"
+            alt="Tensegrity Mimari - Münih Olimpiyat Stadyumu"
       >}}<small>Münih Olimpiyat Stadyumu</small>
       </div>
       <div class="col-md-4">
          {{<img
-            src="needle-tower.jpg"
+            src="tensegrity-mimari-needle-tower.jpg"
             referrerpolicy="no-referrer"
-            alt="needle-tower.jpg"
+            alt="Tensegrity Mimari - Needle Tower"
       >}}<small>Needle Tower</small>
       </div>
       <div class="col-md-4">
          {{<img
             src="ASM-uluslararas-merkez-binas.jpg"
             referrerpolicy="no-referrer"
-            alt="ASM-uluslararası-merkez-binası.jpg"
+            alt="Tensegrity Mimari - ASM Uluslararası Merkez Binası"
       >}}<small>ASM Uluslararası Merkez Binası</small>
       </div>
    </div>
@@ -228,12 +228,12 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="tensegrity-flix-guyon-solo-cello.jpg"
             referrerpolicy="no-referrer"
-            alt="tensegrity-félix-guyon-solo-cello.jpg"
+            alt="Tensegrity Ürün Tasarımı - Félix Guyon, Solo Cello"
       >}}<small>Félix Guyon, Solo Cello</small><br /><br /><br /><br />
          {{<img
             src="simon-busse-studio-mox-marionet-TO-02-1920x1282.jpg"
             referrerpolicy="no-referrer"
-            alt="tensegrity-simon-busse.jpg"
+            alt="Tensegrity Ürün Tasarımı - Simon Busse, Mox Company için Marionet yan sehpasını tasarladı."
       >}}<small
             >Simon Busse, Mox Company için Marionet yan sehpasını
             tasarladı.</small
@@ -243,13 +243,13 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="tensegrity-konstantin-achkov.jpg"
             referrerpolicy="no-referrer"
-            alt="tensegrity-konstantin-achkov.jpg"
+            alt="Tensegrity Ürün Tasarımı - Konstantin Achkov, Heykeltıraş/Tasarımcı"
       >}}<small>Konstantin Achkov, Heykeltıraş/Tasarımcı</small
          ><br /><br />
          {{<img
             src="jacques-henri-carichon-galaxie-sandalye.jpg"
             referrerpolicy="no-referrer"
-            alt="Jacques-Henri Varichon, Galaxie Sandalye"
+            alt="Tensegrity Ürün Tasarımı - Jacques-Henri Varichon, Galaxie Sandalye"
       >}}<small
             >Jacques-Henri Varichon, <strong>Galaxie Sandalye</strong></small
          >
@@ -259,12 +259,12 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
          {{<img
             src="tensegrity-choo-seongmin-the-tension-table.jpg"
             referrerpolicy="no-referrer"
-            alt="tensegrity-choo-seongmin-the-tension-table.jpg"
+            alt="Tensegrity Ürün Tasarımı - Choo Seongmin, The Tension Table"
       >}}<small>Choo Seongmin, The Tension Table</small><br /><br />
          {{<img
             src="NYUN-connected-stool.jpg"
             referrerpolicy="no-referrer"
-            alt="NYUN-connected-stool.jpg"
+            alt="Tensegrity Ürün Tasarımı - NYUN, Connected Stool"
       >}}
 
          <small>NYUN, Connected Stool</small>
